--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,8 +78,7 @@ services:
       - latihan_microservice_new
 
   stock:
-    build: "./stock"
-    image: "latihan_microservice_stock_image"
+    image: staynight/latihan_microservice_stock_image
     container_name: stock_container
     restart: unless-stopped
     ports:
@@ -106,8 +105,7 @@ services:
       
 
   order:
-    build: "./order"
-    image: "latihan_microservice_order_image"
+    image: staynight/latihan_microservice_order_image
     container_name: order_container
     restart: unless-stopped
     ports:
