--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,20 +15,20 @@ jobs:
       - name: Connect To Docker Hub
         uses: docker/login-action@v2
         with: 
-          username: ${{secret.USERNAME}}
-          password:  ${{secret.TOKEN}}
+          username: ${{secrets.USERNAME}}
+          password:  ${{secrets.TOKEN}}
 
       - name: Build Stock Service
-        run: docker build -t ${{ secret.USERNAME }}/latihan_microservice_stock_image:latest ./stock
+        run: docker build -t ${{ secrets.USERNAME }}/latihan_microservice_stock_image:latest ./stock
 
       - name: Push Stock Service
-        run: docker push ${{ secret.USERNAME }}/latihan_microservice_stock_image:latest
+        run: docker push ${{ secrets.USERNAME }}/latihan_microservice_stock_image:latest
 
       - name: Build Order Service
-        run: docker build -t ${{ secret.USERNAME }}/latihan_microservice_order_image:latest ./order
+        run: docker build -t ${{ secrets.USERNAME }}/latihan_microservice_order_image:latest ./order
 
       - name: Push Order Service
-        run: docker push ${{ secret.USERNAME }}/latihan_microservice_order_image:latest
+        run: docker push ${{ secrets.USERNAME }}/latihan_microservice_order_image:latest
 
       - name: Run Docker Compose
         run: |
